# Magmail

./: .gitignore  .pre-commit-config.yaml  LICENSE  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  sample_csv.csv  setup.py  test  test.py
.github/workflows/: pylint.yml  pytype_check.yml
docs/: conf.py  index.rst
docs/magmail/: magmail.rst  modules.rst
script/: get_current_encoding.py
src/: magmail.py  mail.py  utils.py
src/magmail/: __init__.py  errors.py  magmail.py  similar_charset.py  static.py  test.py  types.py  utils.py  variant_charset.py
src/magmail/decode/: __init__.py  decoder.py
src/magmail/decode/charsets/: __init__.py  iso_2022_jp_ms.py
src/magmail/decode/mappings/: __init__.py  jis78.py  jis90.py  nec.py  nec_ibm.py
src/magmail/generator/: __init__.py  eml.py  generate.py  mail.py  reader.py  seed.py  test.ipynb
src/magmail/generator/seeds/: charsets_seeds.json  normal_en_seeds.json  normal_jp_seeds.json  normal_seeds.json  test.json
src/magmail/generator/seeds_scripts/: charset.py  normal.py  normal_en.py  normal_jp.py
src/magmail/magmail/: __init__.py  custom.py  filter.py  magmail.py
src/magmail/mail/: __init__.py  body.py  custom.py  header.py  headers.py  mail.py
tests/: test_plus.py
tests/test_files/eml/normal_en/: seeds-0.eml  seeds-1.eml  seeds-10.eml  seeds-11.eml  seeds-12.eml  seeds-13.eml  seeds-14.eml  seeds-15.eml  seeds-16.eml  seeds-17.eml  seeds-18.eml  seeds-19.eml  seeds-2.eml  seeds-20.eml  seeds-21.eml  seeds-22.eml  seeds-23.eml  seeds-24.eml  seeds-25.eml  seeds-26.eml  seeds-27.eml  seeds-28.eml  seeds-29.eml  seeds-3.eml  seeds-30.eml  seeds-31.eml  seeds-32.eml  seeds-33.eml  seeds-34.eml  seeds-35.eml  seeds-36.eml  seeds-37.eml  seeds-38.eml  seeds-39.eml  seeds-4.eml  seeds-40.eml  seeds-41.eml  seeds-42.eml  seeds-43.eml  seeds-44.eml  (+35 more)
tests/test_files/seeds_scripts/: charset.py  normal_en.py  normal_jp.py
tests/utils/: test_to_path.py
(+999 files in other folders)
