[tool.poetry]
name = "magmail"
version = "0.1.0"
description = ""
authors = ["HEKUTA <Heitorhirose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^5.1.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
