[tool.poetry]
name = "magmail"
version = "0.1.0"
description = ""
authors = ["HEKUTA <Heitorhirose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^5.1.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
sphinx-material = "^0.0.35"
sphinx = "^6.1.3"
sphinx-press-theme = "^0.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = 'True'
mypy_path = './out'

[tool.mypy-numpy]
ignore_missing_imports = 'True'

[tool.mypy-pandas]
ignore_missing_imports = 'True'

[[tool.mypy.overrides]]
module = "magmail.*"
implicit_reexport = true