[tool.poetry]
name = "magmail"
version = "0.1.0"
description = ""
authors = ["HEKUTA <Heitorhirose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^5.1.0"
shortuuid = "^1.0.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pytest = "^7.3.1"
sudachipy = "^0.6.7"
sudachidict-core = "^20230110"
mypy = "^1.3.0"
sphinx = "^7.0.1"
sphinx-material = "^0.0.35"
sphinx-press-theme = "^0.8.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = 'True'
mypy_path = './out'
ignore_missing_imports = 'True'

[[tool.mypy.overrides]]
module = "magmail.*"
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
